# nmea-log-player

./: .travis.yml  Cargo.toml  LICENSE  README.md
gps-logs-samples/: logs_gps.nmea
src/: main.rs  nmea_line_codec.rs  nmea_reader.rs  settings.rs
