[package]
name = "nmea-log-player"
version = "0.3.0"
authors = ["Thomas Pariaud <tpariaud@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.11"
clap = "~2.33"
serialport = "3.3.0"
tokio-serial = "4.3.3"
tokio = { version = "0.2.2", features = ["full"] }
bus = { git = "https://github.com/agausmann/bus.git", branch = "read_handle/lock" }
